--- a/library_self_tool/network_api/build.gradle
+++ b/library_self_tool/network_api/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-    id 'com.android.application'
+//    id 'com.android.application'
+    id 'com.android.library'
 }
 
 android {
@@ -7,7 +8,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.framework.network_api"
+//        applicationId "com.framework.network_api"
         minSdk 21
         targetSdk 32
         versionCode 1
