--- a/library_self_tool/im_ui_kit/build.gradle
+++ b/library_self_tool/im_ui_kit/build.gradle
@@ -1,14 +1,11 @@
-plugins {
-    id 'com.android.library'//library
-}
-apply from: "$rootDir/gradleScript/upload_maven.gradle"
-
+apply from: "$rootDir/gradleScript/lib_or_app.gradle"
 android {
-    namespace 'com.framework.ui'
+    namespace 'com.framework.im_ui_kit'
     compileSdk 32
 
     defaultConfig {
-//        applicationId "com.framework.common_resource"
+        if (!rootProject.ext.local_modules["${project.path}"]["isLib"])
+            applicationId "com.framework.im_ui_kit"
         minSdk 21
         targetSdk 32
         versionCode 1
