--- a/library_self_tool/upload_log_api/build.gradle
+++ b/library_self_tool/upload_log_api/build.gradle
@@ -1,13 +1,11 @@
-plugins {
-    id 'com.android.library'
-}
-
+apply from: "$rootDir/gradleScript/lib_or_app.gradle"
 android {
     namespace 'com.framework.upload_log_api'
     compileSdk 32
 
     defaultConfig {
-//        applicationId "com.framework.upload_log_api"
+        if (!rootProject.ext.local_modules["${project.path}"]["isLib"])
+            applicationId "com.framework.upload_log_api"
         minSdk 21
         targetSdk 32
         versionCode 1
