--- a/library_self_tool/upload_log_api/build.gradle
+++ b/library_self_tool/upload_log_api/build.gradle
@@ -1,36 +1,18 @@
 apply from: "$rootDir/gradleScript/sub_project_proxy.gradle"
 android {
-    namespace 'com.framework.upload_log_api'
-    compileSdk 32
+    defaultConfig{
 
-    defaultConfig {
-        if (!rootProject.ext.local_modules["${project.path}"]["isLib"])
-            applicationId "com.framework.upload_log_api"
-        minSdk 21
-        targetSdk 32
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
+
 }
 
 dependencies {
-
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    //当前模块特有的依赖包
+//    implementation rootProject.ext.dependencies["rxjava"]
 }
