--- a/m_business_module/m_browser/build.gradle
+++ b/m_business_module/m_browser/build.gradle
@@ -1,39 +1,18 @@
 apply from: "$rootDir/gradleScript/sub_project_proxy.gradle"
 android {
-    namespace 'com.framework.m_browser'
-    compileSdk 32
+    defaultConfig{
 
-    defaultConfig {
-        if (!rootProject.ext.local_modules["${project.path}"]["isLib"])
-            applicationId "com.framework.m_browser"
-
-        minSdk 21
-        targetSdk 32
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
+
 }
 
 dependencies {
-    implementation rootProject.ext.dependencies["gson"]
-    implementation rootProject.ext.dependencies["rxjava"]
-    implementation rootProject.ext.dependencies["rxandroid"]
-//    implementation rootProject.ext.dependencies["dsbridge"]
-    implementation rootProject.ext.androidx["androidx-appcompat"]
-    implementation rootProject.ext.androidx["android.material"]
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    //当前模块特有的依赖包
+//    implementation rootProject.ext.dependencies["rxjava"]
 }
