--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,13 @@
-
+pluginManagement {
+    repositories {
+        maven {
+            url = uri("http://localhost:8081/repository/maven-releases/")
+        }
+        maven {
+            url = uri("http://localhost:8081/repository/maven-snapshots/")
+        }
+    }
+}
 rootProject.name = "MAPPStructure"
 include ':app'
 
@@ -23,7 +32,6 @@ include ':library_self_tool:im_core_base'
 include ':library_third_tool'
 include ':library_third_business:im_pay'
 
-
-
 include ':test'
+include ':plugin'
 
