--- a/test/build.gradle
+++ b/test/build.gradle
@@ -1,4 +1,5 @@
 apply from: "$rootDir/gradleScript/sub_project_proxy.gradle"
+//apply plugin: 'org.example.greeting'
 android {
     defaultConfig{
 
