Unable to load class 'com.example.plugin.GreetingPlugin'.
This is an unexpected error. Please file a bug containing the idea.log file.

--- a/test/build.gradle
+++ b/test/build.gradle
@@ -1,5 +1,5 @@
 apply from: "$rootDir/gradleScript/sub_project_proxy.gradle"
-//apply plugin: 'org.example.greeting'
+apply plugin: 'org.example.greeting'
 android {
     defaultConfig{
 
