--- a/settings.gradle
+++ b/settings.gradle
@@ -7,7 +7,12 @@ pluginManagement {
             url = uri("http://localhost:8081/repository/maven-snapshots/")
         }
     }
+    def greeting_plugin_version = "1.5.1-SNAPSHOT"
+    plugins{
+        id 'org.example.greeting' version "$greeting_plugin_version"
+    }
 }
+
 rootProject.name = "MAPPStructure"
 include ':app'
 
@@ -34,4 +39,5 @@ include ':library_third_business:im_pay'
 
 include ':test'
 include ':plugin'
+project(":plugin").name = "greetingPlugin"
 
