--- a/test/build.gradle
+++ b/test/build.gradle
@@ -1,3 +1,6 @@
+plugins{
+//    id 'org.example.greeting'
+}
 apply from: "$rootDir/gradleScript/sub_project_proxy.gradle"
 android {
     defaultConfig{
